# nexoriumai-platform

./: README.md  __init__.py  pyproject.toml
backend/: Dockerfile
backend/api/: main.py
backend/core/: __init__.py  agent.py  memory.py
backend/core/providers/: __init__.py  anthropic.py  base.py  openai.py
backend/core/tools/: __init__.py  base.py  http.py  slack.py
