[tool.poetry]
name = "nexoriumai"
version = "0.1.0"
description = "Nexorium AI – autonomous agent platform"
authors = ["Nexorium AI Team <team@nexoriumai.com>"]
packages = [{ include = "nexoriumai" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
openai = "^1.30.1"
anthropic = "^0.21.3"
sqlmodel = "^0.0.18"
psycopg-binary = "^3.1.18"
redis = "^5.0.2"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
opentelemetry-exporter-otlp = "^1.24.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"
pytest = "^8.0.0"
# test utilities
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 